fixed hover coloring issue on login button, refactored css and inline css structure (moving over to css file), still working on button looks (Stuck on text overflow rn)

--- a/choochoo/src/profile/profile.css
+++ b/choochoo/src/profile/profile.css
@@ -36,6 +36,10 @@ body {
   align-items: center;
 }
 
+.profile_name {
+  margin-left: "3vw";
+}
+
 .profile_name p {
   font-size: inherit;
   text-align: right;
@@ -44,4 +48,35 @@ body {
 .profile_name h3 {
   font-size: inherit;
   text-align: right;
+}
+
+.button {
+  width: 130px;
+  height: 50px;
+  font-size: clamp(19px, 4vw, 23px);
+  box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.185);
+  white-space: nowrap !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
+/* small screen */
+@media (max-width: 600px) {
+  .button {
+    width: 10vw;
+    height: 5vw;
+    font-size: clamp(10px, 1.5vw, 14px) !important;
+  }
+}
+
+/* medium screen */
+@media (min-width: 601px) and (max-width: 960px) {
+  .button {
+    width: 15vw;
+    height: 6vw;
+    font-size: clamp(15px, 3vw, 18px) !important;
+  }
 }
